@@ -119,6 +119,80 @@ __GENERICPOD__
 
 =cut
 
+{
+package bin::import::Handler;
+
+use vars qw( %COLORS );
+
+eval "use Term::ANSIColor qw()";
+
+%COLORS = $@ ?
+()
+: (
+	reset => "reset",
+	error => "bold red",
+	warning => "bold yellow",
+);
+
+sub color
+{
+	my( $type ) = @_;
+
+	return exists $COLORS{$type} ? Term::ANSIColor::color( $COLORS{$type} ) : "";
+}
+
+sub new
+{
+    my( $class, %self ) = @_;
+
+    $self{wrote} = 0;
+    $self{parsed} = 0;
+	$self{ids} = [];
+
+    bless \%self, $class;
+}
+
+sub message
+{
+    my( $self, $type, $msg ) = @_;
+
+	print STDERR color($type);
+	$msg = EPrints::Utils::tree_to_utf8( $msg );
+	print STDERR "$msg\n";
+	print STDERR color('reset');
+}
+
+sub parsed
+{
+    my( $self, $epdata ) = @_;
+
+    $self->{parsed}++;
+
+	if( $self->{scripted} )
+	{
+		print "EPRINTS_IMPORT: ITEM_PARSED\n";
+	}
+}
+
+sub object
+{
+    my( $self, $dataset, $dataobj ) = @_;
+
+    $self->{wrote}++;
+
+	push @{$self->{ids}}, $dataobj->get_id;
+
+	if( $self->{session}->get_noise > 1 )
+	{
+		print STDERR "Imported ".$dataset->id." ".$dataobj->get_id."\n";
+	}
+
+	if( $self->{scripted} )
+	{
+		print "EPRINTS_IMPORT: ITEM_IMPORTED ".$dataobj->get_id."\n";
+	}
+}
+}
 
 use Getopt::Long;
 use Pod::Usage;
@@ -282,8 +356,13 @@ END
 	}
 }
 
+my $handler = bin::import::Handler->new(
+	session => $session,
+	scripted => $scripted,
+);
+
 my $pluginid = "Import::".$ipluginid;
-my $plugin = $session->plugin( $pluginid, parse_only=>$parse_only, scripted=>$scripted );
+my $plugin = $session->plugin( $pluginid, parse_only=>$parse_only, Handler=>$handler );
 
 if( !defined $plugin )
 {
@@ -316,32 +395,55 @@ if( $scripted )
 	print "EPRINTS_IMPORT: BEGIN\n";
 }
 
-my $list = $plugin->input_file(
+$plugin->input_file(
 		dataset=>$ds,
 		filename=>$filename,
 		user=>$userobj,
 	);
 
-if( defined $list )
+my $count = $parse_only ? $handler->{parsed} : $handler->{wrote};
+
+if( $scripted )
 {
-	if( $scripted )
+	print "EPRINTS_IMPORT: DONE $count\n";
+}
+
+if( $count > 0 )
+{
+	if( $noise > 0 )
 	{
-		print "EPRINTS_IMPORT: DONE ".$list->count."\n";
+		if( $parse_only )
+		{
+			print "Would have imported $count records\n";
+		}
+		else
+		{
+			print "Number of records imported: $count\n";
+			if( $noise > 1 )
+			{
+				print join( ",", @{$handler->{ids}})."\n";
+			}
+		}
 	}
-	print "Number of records imported: ".$list->count."\n" if $noise > 0;
-	if( defined $userobj && $ds->confid eq "eprint" )
+	if( @{$handler->{ids}} && defined $userobj && $ds->confid eq "eprint" )
 	{
+		my $user_id = $userobj->get_id;
+
+		my $list = EPrints::List->new(
+			session => $session,
+			dataset => $ds,
+			ids => $handler->{ids}
+		);
+
 		$list->map(
 			sub {
 				my( $session, $dataset, $eprint ) = @_;
-				$eprint->set_value( "userid", $userobj->get_id );
+				$eprint->set_value( "userid", $user_id );
 				$eprint->commit;
 			} );
+
+		$list->dispose;
 	}
-
-
-	print join( ",", @{$list->get_ids})."\n" if $noise > 1;
-	$list->dispose;
 }
 
 $session->terminate();
